add: templates file and dir

--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,5 @@
 RewriteEngine On
 RewriteBase /
-RewriteCond %{REQUEST_URI} !\.(js|css|ico|jpg|png)$
+
+RewriteCond %{REQUEST_URI} !\.(js|css|ico|jpg|png|gif)$
 RewriteRule .+ index.php
